objects/Participants__c.object
<CustomObject>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Corporate Strategy</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Finance and Operations</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Intern/Co-op</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Workplace Services</fullName>
                </value>
                <value>
                    <fullName>XD Design</fullName>
                </value>
                <value>
                    <fullName>XD Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growing_business__c</fullName>
        <label>Growing business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_Sitting_last_years_Tax_filing__c</fullName>
        <label>How Many Sitting last years Tax filing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_business_operates__c</fullName>
        <label>How business operates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I manufacture products</fullName>
                </value>
                <value>
                    <fullName>I sell products directly to the end customer</fullName>
                </value>
                <value>
                    <fullName>I sell products to other retail businesses </fullName>
                </value>
                <value>
                    <fullName>I sell products online</fullName>
                </value>
                <value>
                    <fullName>My clients make appointments with me</fullName>
                </value>
                <value>
                    <fullName>I sell memberships </fullName>
                </value>
                <value>
                    <fullName>I do not own a business </fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_at_Intuit__c</fullName>
        <label>Year started working at Intuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999 or earlier</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                    <isActive>false</isActive>
                    <label>1-2 years</label>
                </value>
                <value>
                    <fullName>10-15 years</fullName>
                    <isActive>false</isActive>
                    <label>10-15 years</label>
                </value>
                <value>
                    <fullName>16+ years</fullName>
                    <isActive>false</isActive>
                    <label>16+ years</label>
                </value>
                <value>
                    <fullName>2-3 years</fullName>
                    <isActive>false</isActive>
                    <label>2-3 years</label>
                </value>
                <value>
                    <fullName>3-4 years</fullName>
                    <isActive>false</isActive>
                    <label>3-4 years</label>
                </value>
                <value>
                    <fullName>4-5 years</fullName>
                    <isActive>false</isActive>
                    <label>4-5 years</label>
                </value>
                <value>
                    <fullName>5-10 years</fullName>
                    <isActive>false</isActive>
                    <label>5-10 years</label>
                </value>
                <value>
                    <fullName>Less than a year</fullName>
                    <isActive>false</isActive>
                    <label>Less than a year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_so_How_many__c</fullName>
        <label>If so, How many?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $20,000</fullName>
                </value>
                <value>
                    <fullName>$20,001 - $30,000</fullName>
                </value>
                <value>
                    <fullName>$30,001 - $40,000</fullName>
                </value>
                <value>
                    <fullName>$40,001 - $50,000</fullName>
                </value>
                <value>
                    <fullName>$50,001 - $75,000</fullName>
                </value>
                <value>
                    <fullName>$75,001 - $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,001 - $150,000</fullName>
                </value>
                <value>
                    <fullName>Greater than $150,000</fullName>
                </value>
                <value>
                    <fullName>Prefer not to share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_from_a_small_business__c</fullName>
        <label>Income from a small business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting, Bookkeeping, or Tax</fullName>
                </value>
                <value>
                    <fullName>Advertising, Marketing, or Public Relations</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Ranching or Farming</fullName>
                </value>
                <value>
                    <fullName>Art, Writing, Photography, Music, or Dance</fullName>
                </value>
                <value>
                    <fullName>Automotive Sales/Repair</fullName>
                </value>
                <value>
                    <fullName>Charitable Organization</fullName>
                </value>
                <value>
                    <fullName>Church or Religious Organization</fullName>
                </value>
                <value>
                    <fullName>Construction or Real Estate Development</fullName>
                </value>
                <value>
                    <fullName>Consulting: Business, Management, Finance</fullName>
                </value>
                <value>
                    <fullName>Design, Architecture or Engineering</fullName>
                </value>
                <value>
                    <fullName>Event Center</fullName>
                </value>
                <value>
                    <fullName>Financial Services (non Accounting/Bookkeeping)</fullName>
                </value>
                <value>
                    <fullName>General Product-based Business</fullName>
                </value>
                <value>
                    <fullName>General Service-based Business</fullName>
                </value>
                <value>
                    <fullName>Hair Salon/Beauty Salon/Barber Shop</fullName>
                </value>
                <value>
                    <fullName>Information Technology (Computers, Software)</fullName>
                </value>
                <value>
                    <fullName>Insurance Agency or Broker</fullName>
                </value>
                <value>
                    <fullName>Interior Design</fullName>
                </value>
                <value>
                    <fullName>Landscaping Services</fullName>
                </value>
                <value>
                    <fullName>Lawn Care or Landscaping</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Lodging (Hotel, Motel)</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Medical, Dental or Health Service</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>Other Nonprofit or Exempt Organization</fullName>
                </value>
                <value>
                    <fullName>Property Management</fullName>
                </value>
                <value>
                    <fullName>Real Estate Brokerage</fullName>
                </value>
                <value>
                    <fullName>Restaurant or Bar</fullName>
                </value>
                <value>
                    <fullName>Retail Shop or Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intuit_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intuit Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_Products__c</fullName>
        <label>Intuit Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1099 E-File Service</fullName>
                </value>
                <value>
                    <fullName>Basic Payroll</fullName>
                </value>
                <value>
                    <fullName>Business Check Envelopes</fullName>
                </value>
                <value>
                    <fullName>Business Checks</fullName>
                </value>
                <value>
                    <fullName>Checks &amp; Supplies</fullName>
                </value>
                <value>
                    <fullName>Cloud ProAdvisor Program</fullName>
                </value>
                <value>
                    <fullName>E-Commerce Web Store Payments</fullName>
                </value>
                <value>
                    <fullName>Employee Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Enhanced Payroll</fullName>
                </value>
                <value>
                    <fullName>Full Service Payroll</fullName>
                </value>
                <value>
                    <fullName>GoPayment Mobile Payments</fullName>
                </value>
                <value>
                    <fullName>Household or Nanny Payroll</fullName>
                </value>
                <value>
                    <fullName>Intuit Education Program</fullName>
                </value>
                <value>
                    <fullName>Intuit Online Payroll</fullName>
                </value>
                <value>
                    <fullName>Intuit Tax Online</fullName>
                </value>
                <value>
                    <fullName>Labor Law Posters</fullName>
                </value>
                <value>
                    <fullName>Lacerte</fullName>
                    <isActive>false</isActive>
                    <label>Lacerte</label>
                </value>
                <value>
                    <fullName>Mint</fullName>
                </value>
                <value>
                    <fullName>Payroll for Accountants</fullName>
                </value>
                <value>
                    <fullName>ProAdvisor Program</fullName>
                </value>
                <value>
                    <fullName>ProConnect Lacerte</fullName>
                </value>
                <value>
                    <fullName>ProConnect ProSeries</fullName>
                </value>
                <value>
                    <fullName>ProConnect Tax Online</fullName>
                </value>
                <value>
                    <fullName>ProSeries</fullName>
                    <isActive>false</isActive>
                    <label>ProSeries</label>
                </value>
                <value>
                    <fullName>QuickBooks Accountant Desktop</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Documents</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Enterprise</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Financing</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Licenses</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Mobile App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intuit_job_title__c</fullName>
        <label>Intuit job title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intuit_product_Employee__c</fullName>
        <label>Intuit product (Employee)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1099 E-File Service</fullName>
                </value>
                <value>
                    <fullName>Basic Payroll</fullName>
                </value>
                <value>
                    <fullName>Business Check Envelopes</fullName>
                </value>
                <value>
                    <fullName>Business Checks</fullName>
                </value>
                <value>
                    <fullName>Checks &amp; Supplies</fullName>
                </value>
                <value>
                    <fullName>Cloud ProAdvisor Program</fullName>
                </value>
                <value>
                    <fullName>CTO Dev Tools and Services</fullName>
                </value>
                <value>
                    <fullName>E-Commerce Web Store Payments</fullName>
                </value>
                <value>
                    <fullName>Employee Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Enhanced Payroll</fullName>
                </value>
                <value>
                    <fullName>Finance Tools and Services</fullName>
                </value>
                <value>
                    <fullName>Full Service Payroll</fullName>
                </value>
                <value>
                    <fullName>GoPayment Mobile Payments</fullName>
                </value>
                <value>
                    <fullName>Household or Nanny Payroll</fullName>
                </value>
                <value>
                    <fullName>HR Tools and Services</fullName>
                </value>
                <value>
                    <fullName>Intuit Education Program</fullName>
                </value>
                <value>
                    <fullName>Intuit Online Payroll</fullName>
                </value>
                <value>
                    <fullName>Intuit Tax Online</fullName>
                </value>
                <value>
                    <fullName>Labor Law Posters</fullName>
                </value>
                <value>
                    <fullName>Lacerte</fullName>
                    <isActive>false</isActive>
                    <label>Lacerte</label>
                </value>
                <value>
                    <fullName>Mint</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
                <value>
                    <fullName>Payroll for Accountants</fullName>
                </value>
                <value>
                    <fullName>ProAdvisor Program</fullName>
                </value>
                <value>
                    <fullName>ProConnect Lacerte</fullName>
                </value>
                <value>
                    <fullName>ProConnect ProSeries</fullName>
                </value>
                <value>
                    <fullName>ProSeries</fullName>
                    <isActive>false</isActive>
                    <label>ProSeries</label>
                </value>
                <value>
                    <fullName>QuickBooks Accountant Desktop</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Documents</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCheckOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCheckOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Co-Owner</fullName>
                </value>
                <value>
                    <fullName>CEO/President</fullName>
                </value>
                <value>
                    <fullName>Senior Level Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Business Consultant</fullName>
                    <isActive>false</isActive>
                    <label>Business Consultant</label>
                </value>
                <value>
                    <fullName>CEO</fullName>
                    <isActive>false</isActive>
                    <label>CEO</label>
                </value>
                <value>
                    <fullName>Independent Contributor</fullName>
                    <isActive>false</isActive>
                    <label>Independent Contributor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contacted_By__c</fullName>
        <label>Last Contacted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contacted_Date__c</fullName>
        <label>Last Contacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_Any_Income_from_Sale_of_stock__c</fullName>
        <label>Income from sale of stock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Year_Any_Mortgage__c</fullName>
        <label>Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_time_TurboTax_was_used__c</fullName>
        <label>Last time TurboTax was used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Last tax year</fullName>
                </value>
                <value>
                    <fullName>2 years ago</fullName>
                </value>
                <value>
                    <fullName>3 or more years ago</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_year_did_you_receive_a_1099__c</fullName>
        <label>Last year, did you receive a 1099?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_year_did_you_receive_a_w_2__c</fullName>
        <label>Last year, did you receive a w-2?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_year_did_you_receive_income_S_B__c</fullName>
        <label>Last year, did you receive income S.B</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <description>It will be provided by the recruiter themselves.</description>
        <label>List Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_accessing_Mint__c</fullName>
        <label>Method of accessing Mint</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mint_Bills_user__c</fullName>
        <label>Mint Bills user</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mint_user__c</fullName>
        <label>Mint user</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Devices_You_Use__c</fullName>
        <label>Mobile Devices you Use</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDASendDate__c</fullName>
        <description>To track the last NDA send date</description>
        <label>NDASendDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDASenderEmail__c</fullName>
        <description>Email address of user who is sending email to participant from customer connect portal</description>
        <label>NDASenderEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NDASenderFirstName__c</fullName>
        <description>First Name of user who is sending NDA to participant from customer connect portal</description>
        <label>NDASenderFirstName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Declined_Date__c</fullName>
        <description>The date the NDA was delcined</description>
        <label>NDA Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Document__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NDA_Document</label>
        <referenceTo>Studio_NDA__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_Signed_Date__c</fullName>
        <description>This is date participant signed date</description>
        <label>NDA Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_QBDT_app_s__c</fullName>
        <label>Name of QBDT app(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_QBO_app_s__c</fullName>
        <label>Name of QBO app(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_accountant__c</fullName>
        <label>Name of accountant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_your_business__c</fullName>
        <label>Name of business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_QuickBooks_Desktop_apps__c</fullName>
        <label>No. of QuickBooks Desktop apps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_QuickBooks_Online_apps__c</fullName>
        <label>No. of QuickBooks Online apps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>